contact form updated

--- a/apps/core/templates/core/base.html
+++ b/apps/core/templates/core/base.html
@@ -150,7 +150,7 @@
                                     <a href="{% url 'frontpage' %}"><img src="{% static 'images/logo.png' %}" alt="#"></a>
                                 </div>
                                 <p class="text">Praesent dapibus, neque id cursus ucibus, tortor neque egestas augue,  magna eros eu erat. Aliquam erat volutpat. Nam dui mi, tincidunt quis, accumsan porttitor, facilisis luctus, metus.</p>
-                                <p class="call">Got Question? Call us 24/7<span><a href="tel:123456789">+0123 456 789</a></span></p>
+                                <p class="call">Got Question? Call us 24/7<span><a href="tel:123456789">+233572098007</a></span></p>
                             </div>
                             <!-- End Single Widget -->
                         </div>
