--- a/apps/product/templates/product/product.html
+++ b/apps/product/templates/product/product.html
@@ -9,7 +9,7 @@
         </figure>
     {% endif %}
 
-    <h1 class="title">{{ product.title }}, ${{ product.price }}</h1>
+    <h1 class="title">{{ product.title }}, ₵{{ product.price }}</h1>
 
     <p class="mb-6"><span class="tag is-dark">{{ product.vendor.name }}</span></p>
 
