--- a/apps/product/templates/product/parts/list_item.html
+++ b/apps/product/templates/product/parts/list_item.html
@@ -7,7 +7,7 @@
 
         <h2 class="subtitle">{{ product.title }}</h2>
 
-        <h3 class="price is-size-6 mb-5">${{ product.price }}</h3>
+        <h3 class="price is-size-6 mb-5">₵{{ product.price }}</h3>
 
         <hr>
 
