nav bar added to contact

--- a/apps/core/templates/contact/base.html
+++ b/apps/core/templates/contact/base.html
@@ -25,6 +25,7 @@
     {% block extrahead %}{% endblock %}
     {% endblock %}
   </head>
+  <header>{% include 'contact/nav.html' %}</header>
   <body class="valign-wrapper2">
       {% block sidebar %}{% endblock %}
       <div class="{% block container_class %}container expand-on-small-only{% endblock %}">
