--- a/apps/core/templates/core/base.html
+++ b/apps/core/templates/core/base.html
@@ -1,5 +1,5 @@
 {% load static %}
-
+{% load material_form %}
 <!DOCTYPE html>
 
 <html>
@@ -150,7 +150,7 @@
                                     <a href="{% url 'frontpage' %}"><img src="{% static 'images/logo.png' %}" alt="#"></a>
                                 </div>
                                 <p class="text">Praesent dapibus, neque id cursus ucibus, tortor neque egestas augue,  magna eros eu erat. Aliquam erat volutpat. Nam dui mi, tincidunt quis, accumsan porttitor, facilisis luctus, metus.</p>
-                                <p class="call">Got Question? Call us 24/7<span><a href="tel:123456789">+233572098007</a></span></p>
+                                <p class="call">Got Question? Call us 24/7<span><a href="tel:123456789">+0123 456 789</a></span></p>
                             </div>
                             <!-- End Single Widget -->
                         </div>
@@ -162,7 +162,7 @@
                                     <li><a href="#">About Us</a></li>
                                     <li><a href="#">Faq</a></li>
                                     <li><a href="#">Terms & Conditions</a></li>
-                                    <li><a href="#">Contact Us</a></li>
+                                    <li><a href="{% url 'contact'%}">Contact Us</a></li>
                                     <li><a href="#">Help</a></li>
                                 </ul>
                             </div>
@@ -192,7 +192,7 @@
                                         <li>NO. 342 - London Oxford Street.</li>
                                         <li>012 United Kingdom.</li>
                                         <li>info@eshop.com</li>
-                                        <li>+032 3456 7890</li>
+                                        <li>+233572098007</li>
                                     </ul>
                                 </div>
                                 <!-- End Single Widget -->
