--- a/apps/core/templates/contact/nav.html
+++ b/apps/core/templates/contact/nav.html
@@ -1,7 +1,13 @@
-<nav class="navbar is-dark">
-    <div class="navbar-brand">
-      <a href="{% url 'frontpage' %}" class="navbar-item"><strong>Interiorshop</strong></a>
-    </div>
 
-    <div class="navbar-menu" id="main-navbar"></div>
+<nav class="navbar navbar-expand-lg navbar-light bg-light">
+  <div class="container-fluid">
+    <div class="collapse navbar-collapse" id="navbarText">
+      <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+        <li class="nav-item">
+          <a class="nav-link active" aria-current="page" href="/">Interiorshop</a>
+        </li>
+      </ul>
+      
+    </div>
+  </div>
 </nav>
