--- a/apps/core/templates/contact/base.html
+++ b/apps/core/templates/contact/base.html
@@ -8,6 +8,7 @@
     <title>{% block title %}Material Design for Django Forms and Admin{% endblock %}</title>
 
     {% block head %}
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
     {% include 'material/includes/material_css.html' %}
       {% block js %}
       <script src="{% static 'material/js/jquery.js' %}"></script>
@@ -31,5 +32,6 @@
       <div class="{% block container_class %}container expand-on-small-only{% endblock %}">
           {% block content %}{% endblock %}
       </div>
+      <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4" crossorigin="anonymous"></script>
   </body>
 </html>
